// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render additional categories component correctly 1`] = `
<withRouter(Languages)
  categories={[]}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  definitions={[]}
  selectedCategory="TEST"
/>
`;

exports[`should render additional categories component correctly 2`] = `<NewCodePeriod />`;

exports[`should render additional categories component correctly 3`] = `
<AnalysisScope
  categories={[]}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  definitions={[]}
  selectedCategory="TEST"
/>
`;

exports[`should render additional categories component correctly 4`] = `
<withRouter(withAvailableFeaturesContext(AlmIntegration))
  categories={[]}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  definitions={[]}
  selectedCategory="TEST"
/>
`;

exports[`should render additional categories component correctly 5`] = `
<withCurrentUserContext(PRDecorationBinding)
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
/>
`;

exports[`should render additional categories component correctly 6`] = `
<withAvailableFeaturesContext(Authentication)
  categories={[]}
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  definitions={[]}
  selectedCategory="TEST"
/>
`;
